--- a/app/common/demo.css
+++ b/app/common/demo.css
@@ -22,6 +22,7 @@ h1 { margin:20px 0px 20px 0px;}
 td {vertical-align: top;}
 .ade-editme{ display: block; margin:4px 0px 4px 0px; white-space: nowrap; background-color: #eee; width:200px; height:20px; padding:3px; cursor:pointer; overflow:hidden; text-overflow:ellipsis;}
 .ade-editrich{display: block; margin:0px; border:1px solid transparent; white-space: nowrap; background-color: #eee; width:200px; height:20px; padding:3px; cursor:pointer; overflow:hidden; text-overflow:ellipsis;}
+.ade-editrich p { margin:0px 0px 10px 0px;}
 
 .container { margin-bottom:200px; margin-right:auto; margin-left:auto; width:90%; max-width:700px;}
 .github { position: absolute; top: 0; right: 0; border: 0; }
